프로비저닝 구현 및 기타 오류 수정